@@ -33,6 +33,9 @@ bool CTimeSeriesDecompositionStub::initialized() const {
     return false;
 }
 
+void CTimeSeriesDecompositionStub::testingForChange(bool /*value*/) {
+}
+
 bool CTimeSeriesDecompositionStub::addPoint(core_t::TTime /*time*/,
                                             double /*value*/,
                                             const maths_t::TDoubleWeightsAry& /*weights*/) {
